Annoter ResponseStatus(NO_CONTENT) for void restkall